third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-nightly/transmute-ref-size-decrease.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-nightly/transmute-ref-size-decrease.rs:17:28
   |
17 | const DECREASE_SIZE: &u8 = transmute_ref!(&[0u8; 2]);
   |                            ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `[u8; 2]` (16 bits)
   = note: target type: `u8` (8 bits)
   = note: this error originates in the macro `$crate::assert_size_eq` which comes from the expansion of the macro `transmute_ref` (in Nightly builds, run with -Z macro-backtrace for more info)
